RESOLVED FIXED87616
Fix mac build with older XCode by removing use of NSEC_PER_MSEC.
https://bugs.webkit.org/show_bug.cgi?id=87616
Summary Fix mac build with older XCode by removing use of NSEC_PER_MSEC.
Luke Macpherson
Reported 2012-05-27 22:36:23 PDT
Fix mac build with older XCode by removing use of NSEC_PER_MSEC.
Attachments
Patch (1.66 KB, patch)
2012-05-27 22:37 PDT, Luke Macpherson
no flags
Patch (1.51 KB, patch)
2012-05-27 22:52 PDT, Luke Macpherson
no flags
Luke Macpherson
Comment 1 2012-05-27 22:37:56 PDT
Luke Macpherson
Comment 2 2012-05-27 22:52:25 PDT
WebKit Review Bot
Comment 3 2012-05-28 02:03:58 PDT
Comment on attachment 144271 [details] Patch Clearing flags on attachment: 144271 Committed r118656: <http://trac.webkit.org/changeset/118656>
WebKit Review Bot
Comment 4 2012-05-28 02:04:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.