Fix mac build with older XCode by defining NSEC_PER_MSEC. https://bugs.webkit.org/show_bug.cgi?id=87616

Reviewed by Hajime Morita.

The following patch introduced the use of NSEC_PER_MSEC which is not defined for older XCode versions.
http://trac.webkit.org/changeset/118631/trunk/Tools/DumpRenderTree/mac/FrameLoadDelegate.mm
Patch just adds a #ifndef / #define check.

* DumpRenderTree/mac/FrameLoadDelegate.mm:
(-[FrameLoadDelegate webView:didStartProvisionalLoadForFrame:]):


git-svn-id: svn://svn.chromium.org/blink/trunk@118656 bbb929c8-8fbe-4397-9dbb-9b2b20218538