third_party/WebKit/Tools/DumpRenderTree/mac/FrameLoadDelegate.mm
@@ -55,6 +55,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import <WebKit/WebViewPrivate.h>
 #import <wtf/Assertions.h>
 
+#ifndef NSEC_PER_MSEC
+#define NSEC_PER_MSEC 1000000ull
+#endif
+
 @interface NSURL (DRTExtras)
 - (NSString *)_drt_descriptionSuitableForTestResult;
 @end
